login page : fixed some issues

--- a/Svelte-kit/Login-page/src/app.css
+++ b/Svelte-kit/Login-page/src/app.css
@@ -12,6 +12,7 @@
     @apply font-roboto relative;
   }
   input {
+    direction: ltr;
     @apply  outline-none border-none bg-slate-200 px-4 py-2 rounded-xl;
   }
 }
